apps/media/jellyfin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-tls
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.k3s.besthomelab.tech`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
  tls: {}
